inter reater reliability calculations included

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -159,3 +159,68 @@ PMID: 32123050},
 	url = {http://dx.doi.org/10.1001/jamaneurol.2022.2262},
 	langid = {en}
 }
+
+@article{staals2014,
+	title = {Stroke subtype, vascular risk factors, and total MRI brain small-vessel disease burden},
+	author = {Staals, Julie and Makin, Stephen D. J. and Doubal, Fergus N. and Dennis, Martin S. and Wardlaw, Joanna M.},
+	year = {2014},
+	month = {09},
+	date = {2014-09-30},
+	journal = {Neurology},
+	pages = {1228--1234},
+	volume = {83},
+	number = {14},
+	doi = {10.1212/WNL.0000000000000837},
+	note = {PMID: 25165388
+PMCID: PMC4180484},
+	langid = {eng}
+}
+
+@article{hallgren2012,
+	title = {Computing Inter-Rater Reliability for Observational Data: An Overview and Tutorial},
+	author = {Hallgren, Kevin A.},
+	year = {2012},
+	date = {2012},
+	journal = {Tutorials in quantitative methods for psychology},
+	pages = {23},
+	volume = {8},
+	number = {1},
+	doi = {10.20982/tqmp.08.1.p023},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3402032/},
+	note = {Publisher: NIH Public Access
+PMID: 22833776},
+	langid = {en}
+}
+
+@article{smith2019,
+	title = {Harmonizing brain magnetic resonance imaging methods for vascular contributions to neurodegeneration},
+	author = {Smith, Eric E. and Biessels, Geert Jan and De Guio, {François} and De Leeuw, Frank Erik and Duchesne, Simon and {Düring}, Marco and Frayne, Richard and Ikram, M. Arfan and Jouvent, Eric and MacIntosh, Bradley J. and Thrippleton, Michael J. and Vernooij, Meike W. and Adams, Hieab and Backes, Walter H. and Ballerini, Lucia and Black, Sandra E. and Chen, Christopher and Corriveau, Rod and DeCarli, Charles and Greenberg, Steven M. and Gurol, M. Edip and Ingrisch, Michael and Job, Dominic and Lam, Bonnie Y.K. and Launer, Lenore J. and Linn, Jennifer and McCreary, Cheryl R. and Mok, Vincent C.T. and Pantoni, Leonardo and Pike, G. Bruce and Ramirez, Joel and Reijmer, Yael D. and Romero, Jose Rafael and Ropele, Stefan and Rost, Natalia S. and Sachdev, Perminder S. and Scott, Christopher J.M. and Seshadri, Sudha and Sharma, Mukul and Sourbron, Steven and Steketee, Rebecca M.E. and Swartz, Richard H. and Van Oostenbrugge, Robert and Van Osch, Matthias and Van Rooden, Sanneke and Viswanathan, Anand and Werring, David and Dichgans, Martin and Wardlaw, Joanna M.},
+	editor = {Jovicich, Jorge and Frisoni, Giovanni B.},
+	year = {2019},
+	month = {12},
+	date = {2019-12},
+	journal = {Alzheimer's & Dementia: Diagnosis, Assessment & Disease Monitoring},
+	pages = {191--204},
+	volume = {11},
+	number = {1},
+	doi = {10.1016/j.dadm.2019.01.002},
+	url = {https://alz-journals.onlinelibrary.wiley.com/doi/10.1016/j.dadm.2019.01.002},
+	langid = {en}
+}
+
+@article{duering2023,
+	title = {Neuroimaging standards for research into small vessel disease{\textemdash}advances since 2013},
+	author = {Duering, Marco and Biessels, Geert Jan and Brodtmann, Amy and Chen, Christopher and Cordonnier, Charlotte and Leeuw, Frank-Erik de and Debette, {Stéphanie} and Frayne, Richard and Jouvent, Eric and Rost, Natalia S. and Telgte, Annemieke ter and Salman, Rustam Al-Shahi and Backes, Walter H. and Bae, Hee-Joon and Brown, Rosalind and Chabriat, Hugues and Luca, Alberto De and deCarli, Charles and Dewenter, Anna and Doubal, Fergus N. and Ewers, Michael and Field, Thalia S. and Ganesh, Aravind and Greenberg, Steven and Helmer, Karl G. and Hilal, Saima and Jochems, Angela C. C. and Jokinen, Hanna and Kuijf, Hugo and Lam, Bonnie Y. K. and Lebenberg, Jessica and MacIntosh, Bradley J. and Maillard, Pauline and Mok, Vincent C. T. and Pantoni, Leonardo and Rudilosso, Salvatore and Satizabal, Claudia L. and Schirmer, Markus D. and Schmidt, Reinhold and Smith, Colin and Staals, Julie and Thrippleton, Michael J. and Veluw, Susanne J. van and Vemuri, Prashanthi and Wang, Yilong and Werring, David and Zedde, Marialuisa and Akinyemi, Rufus O. and Brutto, Oscar H. Del and Markus, Hugh S. and Zhu, Yi-Cheng and Smith, Eric E. and Dichgans, Martin and Wardlaw, Joanna M.},
+	year = {2023},
+	month = {07},
+	date = {2023-07-01},
+	journal = {The Lancet Neurology},
+	pages = {602--618},
+	volume = {22},
+	number = {7},
+	doi = {10.1016/S1474-4422(23)00131-X},
+	url = {https://www.thelancet.com/journals/laneur/article/PIIS1474-4422(23)00131-X/fulltext},
+	note = {Publisher: Elsevier
+PMID: 37236211},
+	langid = {English}
+}
