--- a/doc/_subject_allocation.qmd
+++ b/doc/_subject_allocation.qmd
@@ -24,6 +24,7 @@ These are the currently allocated subjects
 
 ```{r}
 source(here::here("data_local/local.R"))
+source(here::here("R/functions.R"))
 assessor_key2
 ds <- get_allocations()
 ```
